# tradingsim

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md  build.rs  config.lisp  plan.org  rust-toolchain.toml  todo.org
.github/workflows/: ci.yml
scenarios/: buy-only-flow.lisp  curtailment.lisp  day-ahead-print.lisp  duck-curve.lisp  elaborate.lisp  gate-crunch.lisp  morning-ramp.lisp  rainy-summer-day.lisp  scarcity-spike.lisp  sunny-summer-day.lisp  sunny-summer-holiday.lisp  weather-shift.lisp  windy-winter-night.lisp  winter-weekday.lisp
sim/: common.lisp  scenarios.lisp
src/: lib.rs  proto.rs  proto_conv.rs  scenarios.rs  server.rs  weather_server.rs
src/lisp/: mod.rs
src/sim/: book.rs  clock.rs  counterparty.rs  curve.rs  decimal.rs  demand.rs  fleet.rs  gridpool.rs  market.rs  matching.rs  mod.rs  order.rs  trade.rs  weather.rs  world.rs
src/ui/: mod.rs
tests/: grpc_e2e.rs  ui_e2e.rs  ui_selenium.py  weather_e2e.rs
ui-assets/: app.js  index.html  style.css
web/: Cargo.toml  Trunk.toml  index.html  style.css
web/src/: intl.rs  main.rs  types.rs  util.rs
web/src/panels/: chart.rs  filter_bar.rs  gridpools.rs  mod.rs  public_trades.rs  pulse.rs  scenarios.rs  weather.rs
