[package]
name = "tradingsim-web"
version = "0.1.0"
edition = "2024"
publish = false

# Built with `trunk build` from this directory; output lands in
# `web/dist/` and is served by the axum UI server (see ../src/ui).
# Kept out of the workspace's default `cargo build` so host builds
# don't pull in the wasm target chain.

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
