[package]
name = "tradingsim-web"
version = "0.1.0"
edition = "2024"
publish = false

# Built with `trunk build` from this directory; output lands in
# `web/dist/` and is served by the axum UI server (see ../src/ui).
# Kept out of the workspace's default `cargo build` so host builds
# don't pull in the wasm target chain.

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
console_error_panic_hook = "0.1"
wasm-bindgen = "0.2"
# Fetch + WebSocket client. gloo-net is the de-facto wasm HTTP/WS
# wrapper around web-sys; both /api/* fetches and the /ws/* streams
# go through it.
gloo-net = { version = "0.6", features = ["http", "websocket"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# `Stream::next()` on the gloo-net WebSocket comes from futures-util's
# StreamExt; pulled here via the umbrella crate.
futures = { version = "0.3", default-features = false, features = ["std"] }
# `TimeoutFuture` for the polling loops that match the JS UI's setInterval cadence.
gloo-timers = { version = "0.3", features = ["futures"] }
# Direct dep for `web_sys::Storage` (filter-chip persistence) — most
# other web-sys access lands through leptos / gloo-net's transitive enables.
web-sys = { version = "0.3", features = [
    "Storage", "Window",
    # Body class manipulation for the density toggle.
    "Document", "HtmlElement", "Element", "DomTokenList",
    # Canvas + 2d context for the price chart.
    "HtmlCanvasElement", "CanvasRenderingContext2d",
] }
js-sys = "0.3"
